--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  prefix: one
   number: 1
 
 two:
-  name: MyString
+  prefix: two
   number: 1
