--- a/test/fixtures/sections.yml
+++ b/test/fixtures/sections.yml
@@ -1,7 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  CRN: 1
+  section: MyString
+  semester: one
+  course: MyString
+  references: MyString
+  crn: MyString
 
 two:
-  CRN: 1
+  section: MyString
+  semester: two
+  course: MyString
+  references: MyString
+  crn: MyString
