--- a/test/fixtures/prefixes.yml
+++ b/test/fixtures/prefixes.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  prefix: MyString
+  prefix: MyString1
 
 two:
-  prefix: MyString
+  prefix: MyString2
