--- a/test/fixtures/sections_students.yml
+++ b/test/fixtures/sections_students.yml
@@ -1,12 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  student: one
-  section: one
+  student_id: 1
+  section_id: 1
   created_at: <%= Time.now %>
   updated_at: <%= Time.now %>
+
 two:
-  student: two
-  section: two
+  student_id: 2
+  section_id: 2
   created_at: <%= Time.now %>
   updated_at: <%= Time.now %>
