--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -3,15 +3,15 @@
 one:
   id: 1
   Name: MyString
-  Student_number: 1
-  Phone_number: 1
+  Student_number: 123456789
+  Phone_number: 1234567890
   Email_address: MyString
   Physical_address: MyText
 
 two:
   id: 2
   Name: MyString
-  Student_number: 1
-  Phone_number: 1
+  Student_number: 223456789
+  Phone_number: 2234567890
   Email_address: MyString
   Physical_address: MyText
